fixed layout bug for headline numeration

--- a/documentation/_layout/print.css
+++ b/documentation/_layout/print.css
@@ -65,22 +65,7 @@ h3 span.numberator,
 h4 span.numberator {
 	display: block;
 	float: left;
-}
-
-h1 span.numberator {
-	width: 35px;
-}
-
-h2 span.numberator {
-	width: 45px;
-}
-
-h3 span.numberator {
-	width: 55px;
-}
-
-h4 span.numberator {
-	width: 65px;
+	padding-right: 10px;
 }
 
 h1 {
